--- a/themes/matery/_config.yml
+++ b/themes/matery/_config.yml
@@ -93,7 +93,7 @@ indexbtn:
   enable: true
   name: Github
   icon: fa-github-alt
-  url: https://github.com/MUYIio/hexo-themes-matery
+  url: https://github.com/Moveofself/Moveofself.github.io
 
 # The configurations of the second line of home banner
 # icon/button will not show up if you leave the corresponding socialLink empty
@@ -269,7 +269,7 @@ valine:
 # 配置是否在 header 中显示 fork me on github 的图标，默认为true，你可以修改为你的仓库地址.
 githubLink:
   enable: true
-  url: https://github.com/muyiio
+  url: https://github.com/Moveofself
   title: Fork Me
 
 # The password verification feature of read post. To use this feature,
